--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
+    "db-migrate": "^0.11.11",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
